@@ -26,9 +26,9 @@ sub run {
     }
   );
 
-  unless ($tx->success) {
+  if (my $err = $tx->error) {
     my $code = $tx->res->code // 0;
-    my $msg  = $tx->error->{message};
+    my $msg  = $err->{message};
     if    ($code == 401) { $msg = 'Wrong username or password.' }
     elsif ($code == 409) { $msg = 'File already exists on CPAN.' }
     die qq{Problem uploading file "$file": $msg\n};
