@@ -36,17 +36,15 @@ my $port = $daemon->listen([$listen])->start->ports->[0];
 # No certificate
 my $ua = Mojo::UserAgent->new(ioloop => Mojo::IOLoop->singleton);
 my $tx = $ua->get("https://127.0.0.1:$port");
-ok !$tx->success, 'not successful';
 ok $tx->error, 'has error';
 $tx = $ua->get("https://127.0.0.1:$port");
-ok !$tx->success, 'not successful';
 ok $tx->error, 'has error';
 
 # Valid certificates
 $ua->ca('t/mojo/certs/ca.crt')->cert('t/mojo/certs/client.crt')
   ->key('t/mojo/certs/client.key');
 $tx = $ua->get("https://127.0.0.1:$port");
-ok $tx->success, 'successful';
+ok !$tx->error, 'no error';
 is $tx->res->code, 200,      'right status';
 is $tx->res->body, 'works!', 'right content';
 
@@ -62,7 +60,7 @@ $ua = Mojo::UserAgent->new(ioloop => $ua->ioloop);
   is $ua->cert,     't/mojo/certs/client.crt', 'right path';
   is $ua->key,      't/mojo/certs/client.key', 'right path';
   is $ua->insecure, 0,                         'secure';
-  ok $tx->success,  'successful';
+  ok !$tx->error, 'no error';
   is $tx->res->code, 200,      'right status';
   is $tx->res->body, 'works!', 'right content';
 }
@@ -71,7 +69,6 @@ $ua = Mojo::UserAgent->new(ioloop => $ua->ioloop);
 $ua = Mojo::UserAgent->new(ioloop => $ua->ioloop);
 $ua->cert('t/mojo/certs/bad.crt')->key('t/mojo/certs/bad.key');
 $tx = $ua->get("https://127.0.0.1:$port");
-ok !$tx->success, 'not successful';
 ok $tx->error, 'has error';
 
 # Web server with valid certificates and no verification
@@ -94,12 +91,10 @@ $port = $daemon->listen([$listen])->start->ports->[0];
 $ua = Mojo::UserAgent->new(ioloop => $ua->ioloop);
 $ua->cert('t/mojo/certs/bad.crt')->key('t/mojo/certs/bad.key');
 $tx = $ua->get("https://127.0.0.1:$port");
-ok !$tx->success, 'not successful';
 ok $tx->error, 'has error';
 $ua = Mojo::UserAgent->new(ioloop => $ua->ioloop, insecure => 1);
 $ua->cert('t/mojo/certs/bad.crt')->key('t/mojo/certs/bad.key');
 $tx = $ua->get("https://127.0.0.1:$port");
-ok $tx->success, 'successful';
 ok !$tx->error, 'no error';
 is $ua->ioloop->stream($tx->connection)->handle->get_cipher, 'AES256-SHA',
   'AES256-SHA has been negotiatied';
