@@ -122,19 +122,17 @@ is $result, 'test1test2', 'right result';
 
 # Proxy WebSocket with bad target
 $ua->proxy->http("http://127.0.0.1:$proxy");
-my ($success, $leak, $err);
+my ($leak, $err);
 $ua->websocket(
   "ws://127.0.0.1:0/test" => sub {
     my ($ua, $tx) = @_;
-    $success = $tx->success;
-    $leak    = !!Mojo::IOLoop->stream($tx->previous->connection);
-    $err     = $tx->error;
+    $leak = !!Mojo::IOLoop->stream($tx->previous->connection);
+    $err  = $tx->error;
     Mojo::IOLoop->stop;
   }
 );
 Mojo::IOLoop->start;
-ok !$success, 'no success';
-ok !$leak,    'connection has been removed';
+ok !$leak, 'connection has been removed';
 is $err->{message}, 'Proxy connection failed', 'right message';
 
 done_testing();
